--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,13 +20,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-          cache: 'yarn'
+          cache: 'npm'
       
       - name: Install dependencies
-        run: yarn install
+        run: npm ci
       
       - name: Build website
-        run: yarn build
+        run: npm run build
       
       - name: Deploy to GitHub Pages
         env:
@@ -36,4 +36,4 @@ jobs:
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "github-actions"
-          yarn deploy
+          GIT_USER=yunks128 npm run deploy
